# plrust

./: .dockerignore  .gitignore  .licensure.yml  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile.try  LICENSE.md  LINTS.md  README.md  SECURITY.md  architecture.html  build  build.rs  build.sh  built-in-functions.html  config-env-var.html  config-lints.html  config-pg.html  data-types.html  default.nix  dependencies.html  designing-for-trust.html  dynamic-function-calling.html  flake.nix  install-plrust-on-debian-ubuntu.html  install-plrust.html  install-prerequisites.html  logging.html  plrust.control  plrust.html  print.html  publish.sh  rust-toolchain.toml  searchindex.js  searchindex.json  spi.html  spi_demo.sql  triggers.html  (+6 more)
.cargo/: config
.github/docker/: Dockerfile.debian-artifact-build
.github/scripts/: install_cargo_pgrx.sh  install_cargo_pgx.sh  load_cache.sh  save_cache.sh
.github/workflows/: ci.yml  docs.yml  nightly.yml  release_artifacts.yml  tests.yml
components/interface/: Cargo.toml
components/interface/src/: lib.rs
components/interface/src/impls/: mod.rs  value_param.rs  value_result.rs  value_type.rs
components/plrust_interface/: Cargo.toml
components/plrust_interface/src/: lib.rs
components/wit/: guest.wit  types.wit
data-types/: arrays.html  no-unsigned-types.html  udts.html
doc/: README.md  architecture.md  book.toml  designing_for_trust.md
doc/src/: SUMMARY.md  additional-features.md  architecture.md  built-in-functions.md  config-env-var.md  config-lints.md  config-pg.md  config.md  data-types.md  dependencies.md  design-decisions.md  designing-for-trust.md  dynamic-function-calling.md  install-cross-compile.md  install-plrust-dev.md  install-plrust-on-debian-ubuntu.md  install-plrust-prod.md  install-plrust.md  install-prerequisites.md  logging.md  plrust.md  rules-regulations.md  spi.md  triggers.md  trusted-untrusted.md  try-plrust-with-docker.md  update-plrust.md  use-plrust.md
doc/src/data-types/: arrays.md  no-unsigned-types.md  udts.md  working-with-null.md
doc/src/functions/: anatomy.md  arguments.md  dynamic-function-calling.md  return-type.md  set-returning-functions.md
functions/: anatomy.html  arguments.html  return-type.html  set-returning-functions.html
guest_src/: README.md  toolbox.rs
guest_template/: Cargo.toml
guest_template/src/: lib.rs  toolbox.rs
guest_template/src/impls/: error.rs  mod.rs  value.rs  value_type.rs
plrust/: Cargo.toml  build  build.rs  plrust.control
plrust-lints/: Cargo.toml
plrust-lints/.cargo/: config.toml
plrust-lints/hackytest/: Cargo.toml
plrust-lints/hackytest/src/: lib.rs
plrust-lints/plugin/: Cargo.toml
plrust-lints/plugin/src/: lib.rs
plrust-tests/: Cargo.toml  plrust_tests.control  run-tests.sh
plrust-tests/src/: alter.rs  argument.rs  basic.rs  blocked_code.rs  borrow_mut_error.rs  ddl.rs  dependencies.rs  fn_call.rs  lib.rs  matches.rs  panics.rs  range.rs  recursion.rs  return_values.rs  round_trip.rs  time_and_dates.rs  trusted.rs  user_defined_types.rs  versioning.rs
plrust-trusted-pgrx/: Cargo.toml  README.md
plrust-trusted-pgrx/src/: lib.rs
plrust-trusted-pgx/: Cargo.toml  README.md
plrust-trusted-pgx/src/: lib.rs
plrust/src/: allow_list.rs  error.rs  generation.rs  gucs.rs  guest_with_oids.rs  hooks.rs  interface.rs  lib.rs  logging.rs  pgproc.rs  plrust.rs  plrust_proc.rs  plrust_store.rs  prosrc.rs  target.rs  test.rs  tests.rs  wasm_executor.rs
plrust/src/user_crate/: build.rs  capabilities.rs  cargo.rs  crate_variant.rs  crating.rs  lint.rs  loading.rs  mod.rs  ready.rs  state_built.rs  state_generated.rs  state_loaded.rs  state_provisioned.rs  state_validated.rs  target.rs  validate.rs  verify.rs
plrustc/: Cargo.toml  README.md  build.sh  rust-toolchain.toml
plrustc/.cargo/: config.toml
plrustc/plrustc/: Cargo.toml  build.rs
plrustc/plrustc/src/: lints.rs  main.rs
plrustc/plrustc/src/lints/: async_await.rs  autotrait_impls.rs  builtin_macros.rs  closure_trait_impl.rs  extern_blocks.rs  external_mod.rs  fn_ptr.rs  force_ice.rs  leaky.rs  lifetime_param_trait.rs  mod.rs  print_macros.rs  static_impls.rs  stdio.rs  sus_trait_object.rs  tuple_struct_self_pattern.rs  utils.rs
plrustc/plrustc/tests/: uitests.rs
plrustc/plrustc/uitests/: async_await.rs  async_await.stderr  extern_block.rs  extern_block.stderr  extern_crate.rs  extern_crate.stderr  external_mod.rs  external_mod.stderr  external_mod_included_file.txt  fn_pointer.rs  fn_pointer.stderr  fn_traits.rs  fn_traits.stderr  fs_macros.rs  fs_macros.stderr  fs_macros_included_file.txt  ice_hook.rs  ice_hook.stderr  impl_auto_trait.rs  impl_auto_trait.stderr  leaky.rs  leaky.stderr  lifetime_trait.rs  lifetime_trait.stderr  print_functions.stderr  print_macros.rs  print_macros.stderr  static_closure.rs  static_closure.stderr  static_impl_etc.rs  static_impl_etc.stderr  static_impl_unsound.rs  static_impl_unsound.stderr  static_impls.rs  static_impls.stderr  stdio.rs  stdio.stderr  sus_trait_obj_alias.rs  sus_trait_obj_alias.stderr  sus_trait_obj_items.rs  (+11 more)
plrustc/xtask/: Cargo.toml
plrustc/xtask/src/: main.rs
sql/: plrust--1.0--1.1.sql  plrust-1.0.sql
src/: error.rs  generation.rs  gucs.rs  guest.wit  hooks.rs  host.wit  interface.rs  lib.rs  logging.rs  pgproc.rs  plrust.rs  plrust_proc.rs  postalloc.rs  tests.rs
src/generated_crate/: mod.rs
src/user_crate/: crate_variant.rs  mod.rs  skeleton.rs  state_built.rs  state_generated.rs  state_loaded.rs  state_provisioned.rs  state_validated.rs  target.rs  tests.rs
src/wit/: guest.wit  host.wit  types.wit
trusted-pgx/: Cargo.toml
trusted-pgx/src/: lib.rs
