[package]
name = "plrust"
version = "0.0.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
edition = "2021"
resolver = "2"
license = "PostgreSQL Open Source License"
description = "A Rust procedural language for PostgreSQL"
homepage = "https://github.com/zombodb/plrust/"
repository = "https://github.com/zombodb/plrust/"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg10 = ["pgx/pg10", "pgx-tests/pg10", "plrust_interface/pg10"]
pg11 = ["pgx/pg11", "pgx-tests/pg11", "plrust_interface/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12", "plrust_interface/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13", "plrust_interface/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14", "plrust_interface/pg14"]
pg_test = []
# Be accomodating to sandboxed builds with no network.
sandboxed = []

[dependencies]
bincode = "1"
pgx = "0.4.1"
include_dir = "0.7"
plrust_interface = { path = "components/plrust_interface", default-features = false, features = [ "host" ] }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
syn = "1"
proc-macro2 = "1"
prettyplease = "0.1"

[dev-dependencies]
pgx-tests = "0.4.1"
tempdir = "0.3.7"
once_cell = "1.7.2"
toml = "0.5.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
