[package]
name = "plrust"
version = "0.0.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
edition = "2021"
license = "PostgreSQL Open Source License"
description = "A Rust procedural language for PostgreSQL"
homepage = "https://github.com/zombodb/plrust/"
repository = "https://github.com/zombodb/plrust/"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14", "verify"]
pg10 = ["pgx/pg10", "pgx-tests/pg10"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = []
# Be accomodating to sandboxed builds with no network.
sandboxed = []
# Forcibly enable a feature used by x86_64 MacOS machines because they're bad at `dlclose()`
force_enable_x86_64_darwin_generations = []
target_postgrestd = []
verify = ["dep:geiger"]

[dependencies]
current_platform = "0.2.0"
cfg-if = "1"
pgx = { version = "0.5.0" }
pgx-pg-config = { version = "0.5.0" }
libloading = "0.7.2"
thiserror = "1.0"
eyre = "0.6"
color-eyre = "0.6"
tracing = { version = "0.1", features = [ "valuable" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-error = "0.2"
syn = "1"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.1"
toml = "0.5"
tempdir = "0.3.7"
once_cell = "1.7.2"

geiger = { version = "0.4", optional = true } # unsafe detection

[dev-dependencies]
pgx-tests = "0.5.0"
tempdir = "0.3.7"
once_cell = "1.7.2"
toml = "0.5.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
