[package]
name = "plrust-tests"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg_test = []

[dependencies]
pgrx = "=0.9.7"
tempdir = "0.3.7"
once_cell = "1.18.0"

[dev-dependencies]
pgrx-tests = "=0.9.7"
tempdir = "0.3.7"
once_cell = "1.18.0"
