[package]
name = "plrust-trusted-pgrx"
version = "1.2.4-beta.pg16b3"
authors = ["TCDI <opensource@tcdi.com>"]
edition = "2021"
license = "PostgreSQL"
description = "Minimal set of `pgrx` rexports for plrust, which the authors have deemed trusted"
homepage = "https://github.com/tcdi/plrust/"
repository = "https://github.com/tcdi/plrust/"

[lib]
crate-type = ["rlib"]

[features]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]

[dependencies]
# changing the pgrx version will likely require at least a minor version bump to this create
pgrx = { version = "0.10.0-beta.3", features = [ "no-schema-generation" ], default-features = false }

[package.metadata.docs.rs]
features = ["pg14"]
rustc-args = ["--cfg", "docsrs"]
