[package]
name = "plrust-trusted-pgx"
version = "1.0.0"
authors = ["TCDI <opensource@tcdi.com>"]
edition = "2021"
license = "PostgreSQL"
description = "Minimal set of `pgx` rexports for plrust, which the authors have deemed trusted"
homepage = "https://github.com/tcdi/plrust/"
repository = "https://github.com/tcdi/plrust/"

[lib]
crate-type = ["rlib"]

[features]
pg13 = ["pgx/pg13"]
pg14 = ["pgx/pg14"]
pg15 = ["pgx/pg15"]

[dependencies]
# changing the pgx version will likely require at least a minor version bump to this create
pgx = { version = "=0.7.4", features = [ "no-schema-generation" ], default-features = false }

[package.metadata.docs.rs]
features = ["pg14"]
rustc-args = ["--cfg", "docsrs"]
