[package]
name = "plrust"
version = "1.2.1"
authors = ["TCDI <opensource@tcdi.com>"]
edition = "2021"
license = "PostgreSQL Open Source License"
description = "A Trusted Rust procedural language for PostgreSQL"
homepage = "https://github.com/tcdi/plrust/"
repository = "https://github.com/tcdi/plrust/"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
# is plrust to be compiled as a "trusted" language handler, meaning it requires postgrestd at runtime
trusted = []
pg_test = []
# Be accomodating to sandboxed builds with no network.
sandboxed = []
# Forcibly enable a feature used by x86_64 MacOS machines because they're bad at `dlclose()`
force_enable_x86_64_darwin_generations = []
# verify = [] # Revisit this later for other verification features

[dependencies]
cfg-if = "1" # platform conditional helper
once_cell = "1.18.0" # polyfills a nightly feature
semver = "1.0.17"
home = "0.5.5" # where can we find cargo?

# working with our entry in pg_catalog.pg_proc
base64 = "0.21.2"
flate2 = "1.0.26"
serde = "1.0.164"
serde_json = "1.0.97"

# pgrx core details
pgrx = { version = "=0.9.6" }

# language handler support
libloading = "0.8.0"
toml = "0.7.4"
tempdir = "0.3.7" # for building crates
tempfile = "3.6.0"

# error handling, tracing, formatting
thiserror = "1.0"
eyre = "0.6"
color-eyre = "0.6"
tracing = { version = "0.1", features = [ "valuable" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-error = "0.2"
prettyplease = "0.2"

# procedural macro handling
syn = "2"
quote = "1"
proc-macro2 = "1"
omnipath = "0.1.6"

[target.'cfg(target_os="linux")'.dependencies]
memfd = "0.6.3" # for anonymously writing/loading user function .so


[dev-dependencies]
pgrx-tests = { version = "=0.9.6" }
tempdir = "0.3.7"
once_cell = "1.18.0"
toml = "0.7.4"
