[package]
name = "plrust_interface"
version = "0.0.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
edition = "2021"
resolver = "2"
license = "PostgreSQL Open Source License"
description = "A Rust procedural language for PostgreSQL"
homepage = "https://github.com/zombodb/plrust/"
repository = "https://github.com/zombodb/plrust/"

[features]
default = ["guest"]
guest = []
host = ["pgx", "wasmtime", "wasmtime-wasi"]
pg10 = ["pgx/pg10"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg13 = ["pgx/pg13"]
pg14 = ["pgx/pg14"]

[dependencies]
bincode = "1"
serde = "1"
pgx = { version = "0.4.1", optional = true }
wasmtime = { version = "0.35", optional = true }
wasmtime-wasi = { version = "0.35", optional = true }