[package]
name = "plrustc"
version = "1.1.0"
edition = "2021"
description = "`rustc_driver` wrapper for plrust"
license = "PostgreSQL"
authors = ["TCDI <opensource@tcdi.com>"]
homepage = "https://github.com/tcdi/plrust/"
repository = "https://github.com/tcdi/plrust/"

[dependencies]
libc = "0.2.142"
once_cell = "1.17.1"

[dev-dependencies]
compiletest_rs = "0.9"

[package.metadata.rust-analyzer]
rustc_private = true

