[package]
name = "plrustc"
version = "1.2.8"
edition = "2021"
description = "`rustc_driver` wrapper for plrust"
license = "PostgreSQL"
authors = ["TCDI <opensource@tcdi.com>"]
homepage = "https://github.com/tcdi/plrust/"
repository = "https://github.com/tcdi/plrust/"

[dependencies]
libc = "0.2.150"
once_cell = "1.18.0"

[dev-dependencies]
compiletest_rs = "0.10.2"

[package.metadata.rust-analyzer]
rustc_private = true

